# DistributedComputing

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yaml  pytest.ini  requirements.txt
.github/workflows/: main.yml  release.yml
api/: openapi.yaml
deprecated/tests/: cli_tests.cpp  master_integration_test.cpp  worker_integration_test.cpp
doc/: database.md  protocols.md
doc/drawio/: Universal concept.drawio
migrations/: 20260330_01_7BZ6I-init.py
migrations_broker_mongo/: 20260402120000_init.py  20260402_01_init.py
migrations_broker_pg/: 20260330_01_7BZ6I-init.py
scripts/: build_full_matrix.sh  calculate_worker_id.sh  cli_echo_smoke.sh  copy_cosim_top.ps1  copy_dc_worker.ps1  init_db.py  init_mongo.py  init_pg.py  install_master_service.sh  quartus_agent_wrapper.ps1  quartus_wrapper.sh  test_echo.py
scripts/extract/: analyse_project.py  extract_fmax.tcl  extract_reports.tcl  migrate_to_analysis.py  quartus_pipeline_taskid_only.py
scripts/ssh_utils/: run_on_clients.sh  scp_from_clients.sh  scp_to_clients.sh
scripts/task_generation/: generate_mesh_dc_tasks.sh  generate_mesh_tasks.conf  generate_mesh_tasks.sh
scripts/win_deploy/: install-service.ps1  service.ps1
scripts/wsl_utils/: StartWSL.vbs  install-always-wsl-service.ps1
src/: CMakeLists.txt
src/broker/: CMakeLists.txt  broker.cpp  broker.hpp  mongo_broker.cpp  mongo_broker.hpp  pg_broker.cpp  pg_broker.hpp  status.hpp
src/cli/: CMakeLists.txt  api_client.cpp  api_client.h  formatters.cpp  formatters.hpp  main.cpp
src/common/: CMakeLists.txt  env.cpp  env.hpp  logging.cpp  logging.h  ssh_askpass_win.cpp  ssh_tunnel.cpp  ssh_tunnel.hpp  string_utils.h  time.cpp  time_utils.hpp
src/master/: CMakeLists.txt  api_mappers.cpp  api_mappers.h  api_mappers.hpp  broker.hpp  control_service.cpp  control_service.h  control_service.hpp  log_store.cpp  log_store.h  log_store.hpp  main.cpp  mongo_broker.cpp  mongo_broker.hpp  mongo_storage.cpp  mongo_storage.hpp  pg_broker.cpp  pg_broker.hpp  pg_storage.cpp  pg_storage.hpp  requirements.txt  status.hpp  storage.cpp  storage.h  storage.hpp
src/worker/: CMakeLists.txt  agent_client.cpp  agent_client.h  agent_client.hpp  main.cpp  task_executor.cpp  task_executor.h  task_executor.hpp  worker_app.cpp  worker_app.h  worker_app.hpp
tests/: CMakeLists.txt  __init__.py  cli_integration_test.cpp  common_tests.cpp  conftest.py  master_integration_test.cpp  master_tests.cpp  test_binaries_smoke.py  test_common.py  test_common_utils.py  test_docker_images_smoke.py  test_init_mongo_script.py  worker_tests.cpp
tests/cli/: test_cli_integration.py  test_cli_unit.py
tests/config/: master_env.json  worker_env.json
tests/master/: __init__.py  conftest.py  db_mocker.py  mock_master_server.py  test_master_api_with_db_mocker.py  test_master_backend_config.py  test_master_db_ssl_certificate_acceptance.py  test_master_integration.py  test_master_unit.py
tests/utils/: pg.py  process.py
tests/worker/: __init__.py  conftest.py  mock_master_for_worker_server.py  test_worker_api_with_mocker.py  test_worker_integration.py  test_worker_unit.py  worker_mocker.py
toolchains/: arm64-linux-gnu.cmake  mingw64.cmake  x86_64-linux-gnu.cmake
